--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
-<!DOCTYPE html>
-<html lang="no">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Min portefølje</title>
+    <title>Document</title>
+
 </head>
 <body>
-   <h1>Min portefølje</h1>    
+    <a href="tekno.html">teknologiforståelse</a>
+    <h1>Min portefølje</h1>
+    <p> Eg heiter Farouk</p>
+    <p>Eg bur på kvinnherad</p>
+    <p>Eg har budd i Norge 9 år </p>
+    <p>Eg kom til Norge 2016
+    <p>Eg er 15 år gammal
+    <p>Eg har 3 søstre</p>
+    <p>Eg har ein far og 1 mor</p>
+    <p>Eg går på Vollyball</p>
+    <p>Linja eg går på er IT</p>
+    <p>Eg synest det er veldig kjekt å gå på denne Linjen</p> 
+    <img src="images/Bilde Vissitkort.png" alt="visitkort">
+    <p><img src="images/FaroukTinkerkad.png" alt="Bilde fra tinkercad Farouk"></p>
+    <img src="images/Farouk Tinkercad Sverd.png" alt="Bilde fra Tinkercad Sverd"></p>
+    </p>
 </body>
 </html>
