--- a/medie.html
+++ b/medie.html
@@ -1,4 +1,4 @@
-html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +8,13 @@ html lang="en">
     <a href="index.html">Heim</a>
     <a href="tekno.html">teknologiforståelse</a>
    <h1>produksjon og historiefortelling</h1>
-   <img src="images/Bilde Vissitkort.png" alt="visitkort">
-   <img src="images/farge sirkel.png"alt="farge sirkel">
-   <img src="images/Farouk bilde.png"alt="Farouk bilde">
-    </p>
+   <img src="images/Bilde Vissitkort.png"  width="380px" height="380px"   alt="visitkort">
+   <img src="images/farge sirkel.png" width="380px" height="380px"      alt="farge sirkel"> 
+   <img src="images/Farouk bilde.png"  width="380px" height="380px"     alt="Farouk bilde">
+   <img src="images/proskjekt produksjon og historiefortelling (1).jpg " width="380px" height="380px"   alt=" bilde av bokomslag">"
+   <img src="images/GetImage.jpg" width="380px" height="380px" >
+   <video src="DJI_0066_1.mp4"controls width="380px" height="380px" ></video>
+   
+</p>
 </body>
 </html>
