--- a/tekno.html
+++ b/tekno.html
@@ -11,6 +11,7 @@
    <img src="images/Bilde Vissitkort.png" alt="visitkort">
    <p><img src="images/FaroukTinkerkad.png" alt="Bilde fra tinkercad Farouk"></p>
    <img src="images/Farouk Tinkercad Sverd.png" alt="Bilde fra Tinkercad Sverd"></p>
-    </p>
+   <img src="images/proskjekt produksjon og historiefortelling (1).jpg" alt="Bilde av bokomslag"></p>
+</p>
 </body>
-</html>
+</html> 
